Requires:
~~~~~~~~~
- Now using CPSUtil.integration.isProductPresent method.
New features:
~~~~~~~~~~~~~
- Add keysSortedBy method to Vocabulary. Criterium available and well tested 
  are 'id', 'label', 'i18n'. You can also sort keys with a sort_function which 
  take the following list as an element (key, label, msgid, translated_msgid).
- Try to implement sorted vocabularies. Now Vocabulary() can take an extra 
  argument: sort_function. It permits to insert a new key at good place on set.
  Three methods are added: getSortFunction, setSortFunction, sortKeys.
  The last one is not called 'sort' because it must not implement the list.sort
  API. It will only help when a portal manager change Vocabulary sort function.
- Possible to add JavaScript code in a widget rendering information
- Made the Text Image Widget be able to handle either 1 block or 2 blocks of
  text.
Bug fixes:
~~~~~~~~~~
- Generic select widget did not refuse validation of empty values when required
  if vocabulary did not hold blank values
- Generic select widget generated multiple "selected" attributes when the same
  key was repeated (typically blank keys)
- Made that in edit mode if a css class is specified, this is the class name
  suffixed by "Edit" that is returned. This is because in edit mode one usually
  doesn't want the widgets to have the same appearance that they have in view
  mode. Actually in edit mode one prefers to have all the widgets with the same
  neutral presentation.
- Removed some needless <span> elements used for i18n.
- Fixed the English translation telling the maximum size of an attached file.
- Correct commit when a proxy is present in a datamodel for a new document.
- Don't do properties post-processing in Layout every time it's called.
- The URL Widget returned an empty tag (<a class="url"></a>) when there was
  no value to display which made the 'hidden if empty' option ineffective.
- The Email Widget returned an empty tag (<a ...></a>) when there was